--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -52,4 +52,6 @@ android {
 dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'eu.chainfire:libsuperuser:1.0.0.+'
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:support-v4:21.0.3'
 }
