--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.owentech.DevDrawer">
+
     <uses-permission android:name="android.permission.BIND_REMOTEVIEWS"/>
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
-                 android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+                 android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             >
         <activity android:name=".activities.MainActivity"
                   android:label="@string/app_name"
@@ -19,7 +21,7 @@
         </activity>
         <activity android:name=".activities.ClickHandlingActivity"
                   android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Holo.Light.Dialog"
+                  android:theme="@style/Theme.AppCompat.Light.Dialog"
                   android:exported="true"
                   android:noHistory="true"
                   android:excludeFromRecents="true"
@@ -30,9 +32,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.EditDialog" android:theme='@android:style/Theme.Holo.Light.Dialog.NoActionBar'/>
+        <activity android:name=".activities.EditDialog" android:theme='@style/Theme.AppCompat.Light.Dialog'/>
         <activity android:name=".activities.PrefActivity"/>
-        <activity android:name=".activities.ChooseActivityDialog" android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"/>
+        <activity android:name=".activities.ChooseActivityDialog" android:theme="@style/Theme.AppCompat.Dialog"/>
 
         <activity android:name=".activities.LegacyDialog"
                   android:theme="@android:style/Theme.Dialog"
