--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -7,9 +7,11 @@
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
-                 android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-            >
+    <application
+        android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+        android:theme="@style/Theme.DevDrawer"
+        >
+
         <activity android:name=".activities.MainActivity"
                   android:label="@string/app_name"
                 >
