--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>
 
     <application
-        android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" android:icon="@mipmap/ic_launcher"
         android:theme="@style/Theme.DevDrawer"
         >
 
@@ -64,7 +64,7 @@
 
         <!--<service android:name=".UpdateWidgetService"></service>-->
 
-        <receiver android:icon="@drawable/ic_launcher"
+        <receiver android:icon="@mipmap/ic_launcher"
                   android:label="@string/app_name"
                   android:name=".appwidget.DDWidgetProvider"
                   android:enabled="@bool/widgetEnabled">
