--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>
 
     <application
-        android:label="@string/app_name" android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
         android:theme="@style/Theme.DevDrawer"
+        android:allowBackup="true"
         >
 
         <activity android:name=".activities.MainActivity"
